k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
