k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    name: frontend-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific #Prefix #Exact
        path: "/foo"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 80
